# tech-blog-client

./: .gitignore  README.md  apollo.config.js  cargo.toml  codegen.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  prettierrc.mjs  tsconfig.json
public/helper-index/: rust-foreword.json
public/helper-index/git/: git-commands.json  git-simple-concept.json
public/helper-index/html/: html-script-tag.json
public/helper-index/jsp/: jsp-simple-start.json
public/helper-index/rust/: rust-ownership.json
public/search-index/: dummy.json  index.json
scripts/mdx/: Cargo.toml
scripts/mdx-sync/: Cargo.toml
scripts/mdx-sync/src/: https.rs  lib.rs  main.rs  types.rs
scripts/mdx/src/: https.rs  lib.rs  main.rs  types.rs
src/: mdx-components.tsx
src/app/: layout.tsx  not-found.tsx  page.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/articles/: layout.tsx  page.tsx
src/app/posts/: layout.tsx  not-found.tsx  page.tsx
src/app/toys/: page.tsx
src/components/: typo-logo.tsx
src/components/header-banner/: header-banner.tsx  toggle-theme-button.tsx
src/content/: 01-react.mdx  01-typescript.mdx  javascript-functional-programming.mdx  javascript-modern-features.mdx  rust-foreword.mdx  test-description.mdx  typescript-advanced-patterns.mdx  typescript-design-patterns.mdx
src/core-lib/: mdx.ts
src/lib/: mdx.ts  posts.ts
src/mdx/: mdx-type.ts  mdx.ts
src/plugins/: rehype-code-filename.ts
src/style/: fonts.css  globals.css
src/styles/: code.css  components.css  fonts.css  globals.css  utilities.css
src/types/: rehype.d.ts
(+127 files in other folders)
