[package]
name = "mdx-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdx-sync"
path = "src/main.rs"

[lib]
name = "mdx_sync"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
sha2 = "0.10"
base64 = "0.21"
