[package]
name = "mdx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdx"
path = "src/main.rs"

[lib]
name = "mdx"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
sha2 = "0.10"
base64 = "0.21"
dotenv = "0.15"
